--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,5 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.1'
     implementation 'com.rmtheis:tess-two:9.0.0'
     implementation project(':openCVLibrary341')
+    implementation files('libs/ocr-sdk.jar')
 }
